sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:15: error: not enough arguments for method plusPetit: (x$1: Int, x$2: Int)Boolean.
Unspecified value parameter x$2.
    	if (plusPetit((j,j-1))) {
                     ^